# pu_osls

./: .gitignore  README.md  debug.py  pyproject.toml  requirement.txt  requirements-lock.txt  requirements.txt
notebooks/: pretraining.ipynb
scripts/: train_cluster.py
scripts/slurm/: train_pretraining_multigpu.sbatch  train_pretraining_smoketest.sbatch
src/pu_osls_tabpfn/: __init__.py  eval_pu_osls.py  model.py  prior_data.py  prior_data_legacy.py  train.py
src/pu_osls_tabpfn/tabicl_prior/: activations.py  dataset.py  genload.py  hp_sampling.py  mlp_scm.py  prior_config.py  reg2cls.py  tree_scm.py  utils.py
tests/: test_prior_data.py
