[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pu-osls-tabpfn"
version = "0.1.0"
description = "Synthetic-prior PU/OSLS experiments with a lightweight TabPFN-style model."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "joblib",
  "numpy",
  "scipy",
  "scikit-learn",
  "torch",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]
tree-prior = [
  "xgboost",
]

[project.scripts]
pu-osls-train = "pu_osls_tabpfn.train:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
